--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-simplexml": "*",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/orm": "^2.8",
         "jms/serializer": "^3.11",
