--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,17 @@
         "doctrine/orm": "^2.8",
         "jms/serializer": "^3.11",
         "jms/serializer-bundle": "^3.7",
+        "pdepend/pdepend": "^2.8",
         "phpunit/phpunit": "^9.5",
+        "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/security-csrf": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "config": {
